2010-07-22  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Dom.Parser/ProjectDomService.cs:
	* MonoDevelop.Projects.Dom.Serialization/CodeCompletionDatabase.cs:
	* MonoDevelop.Projects.Dom.MemoryDatabase/ProjectMemoryProjectDom.cs:
	  Made queue parse job public.

2010-07-22  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Dom.Serialization/SimpleCodeCompletionDatabase.cs:
	  Lock database updates.

2010-07-22  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Dom/IExpressionFinder.cs: HACK: the
	  expression finder now needs to take an textEditorData -
	  unfortunately we've a rule that doesn't allow to reference
	  the Mono.TextEditor from here - take care when calling this.

2010-07-21  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Dom.Parser/ProjectDom.cs:
	* MonoDevelop.Projects.Dom.Serialization/CodeCompletionDatabase.cs:
	  Fixed little namespace bug.

2010-07-20  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Dom.Parser/ProjectDom.cs: Some
	  performance optimization of SearchType.

2010-07-20  Mike Krüger  <mkrueger@novell.com>

	* Makefile.am:
	* MonoDevelop.Core.csproj:
	* MonoDevelop.Projects.Dom.Serialization/FileEntry.cs:
	* MonoDevelop.Projects.Dom.Serialization/ClassEntry.cs:
	* MonoDevelop.Projects.Dom.Serialization/DomTypeProxy.cs:
	* MonoDevelop.Projects.Dom.Serialization/NamespaceEntry.cs:
	* MonoDevelop.Projects.Dom.Serialization/CodeCompletionDatabase.cs:
	* MonoDevelop.Projects.Dom.Serialization/ProjectCodeCompletionDatabase.cs:
	* MonoDevelop.Projects.Dom.Serialization/AssemblyCodeCompletionDatabase.cs:
	  Optimized the code completion database (especially the
	  string operations in the type lookup were expensive).

2010-07-12  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Core.addin.xml:
	* MonoDevelop.Projects.CodeGeneration/BaseRefactorer.cs:
	* MonoDevelop.Projects.CodeGeneration/CodeRefactorer.cs: